daas-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: daas
spec:
  rules:
  - host: daas.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: daas
          servicePort: 5000
